# Twin_twitter_app

./: Dockerfile  config.py  database.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml  tests.yml
templates/: index.html
tests/: test_api.py
